# triangles

./: .gitignore  CMakeLists.txt  Makefile  readme.txt  ren.cpp  ren_e.cpp
