cmake_minimum_required(VERSION 3.1)
project(ren)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE "Release")

if(MSVC)
message("-- [MSVC on Windows.]")
set(SFML_INC_PATH ../SFML-2.5.1/include)
set(SFML_LIB_PATH ../SFML-2.5.1/lib)
set(SFML_DLL_PATH ../SFML-2.5.1/bin)
set(CGAL_INC_PATH ../CGAL-5.2.1/include)
set(BOOST_INC_PATH ../boost_1_75_0)
include_directories(${SFML_INC_PATH} ${CGAL_INC_PATH} ${BOOST_INC_PATH})
link_directories(${SFML_LIB_PATH})
add_executable(ren ren.cpp)
target_link_libraries(ren sfml-graphics sfml-window sfml-system)
file(COPY ${SFML_DLL_PATH}/sfml-graphics-2.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug)
file(COPY ${SFML_DLL_PATH}/sfml-system-2.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug)
file(COPY ${SFML_DLL_PATH}/sfml-window-2.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug)
endif()

if(UNIX AND NOT APPLE)
message("-- [Linux :)]")
find_package(CGAL REQUIRED COMPONENTS Core)
list(APPEND CMAKE_MODULE_PATH "/usr/share/SFML/cmake/Modules")
find_package(SFML 2 REQUIRED graphics window system)
add_executable(ren ren.cpp)
target_link_libraries(ren CGAL::CGAL CGAL::CGAL_Core sfml-graphics sfml-window sfml-system)
endif()